--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/MarceloM95/ProjetoPPIM2AV#readme",
   "dependencies": {
+    "eslint": "^8.54.0",
     "express": "^4.18.2"
   }
 }
